@@ -1,3 +1,9 @@
+2010-04-19  Elliott Baron  <ebaron@fedoraproject.org>
+
+	* userguide/General-Usage.html: Regenerated to include Mac OSX info.
+	* userguide/Valgrind\ Reference-toc.xml: Likewise.
+	* userguide/Valgrind\ Reference.xml: Likewise.
+
 2009-08-07  Andrew Overholt  <overholt@redhat.com>
 
 	Bug #285861
